# swc-transform-cx-jsx

./: Cargo.toml  package.json
src/: lib.rs
tests/03_preserves_whitespace_if_ws_flag_is_set/: input.js  output.js
tests/05_transforms_jsx_attributes_to_config_props/: output.js
tests/06_transform_jsx_literal_attributes_to_config_props/: output.js
tests/07_transform_jsx_object_attrs_to_config_props/: output.js
tests/19_transform_lowercase_tags_into_htmlelement_with_tag_prop/: output.js
tests/26_register_functional_cx_components/: output.js
tests/5_transforms_jsx_attributes_to_config_props/: output.js
tests/8_transform_jsx_function_attrs_to_config_props/: output.js
tests/svg_test/: input.js  input.jsx
