[package]
name = "swc-transform-cx-jsx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
serde = "1"
swc_atoms = "0.4.10"
swc_common = "0.27.13"
swc_core = { version = "0.18.*", features = ["plugin_transform"] }
swc_ecma_parser = "0.118.6"
swc_ecma_transforms_base = "0.108.7"
testing = "0.30.2"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
