[package]
name = "swc-transform-cx-jsx"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gygasync/swc-transform-cx-jsx"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
swc_common = "0.27.13"
swc_core = { version = "0.18.*", features = ["plugin_transform"] }
swc_ecma_parser = "0.118.6"
swc_ecma_transforms_base = "0.108.7"
testing = "0.30.2"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.