[package]
name = "swc_transform_cx_jsx"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gygasync/swc-transform-cx-jsx"
license = "MIT OR Apache-2.0"
description = "Plugin for swc.rs that transforms cxjs.io"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"


# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.